// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Villain component renders correctly 1`] = `
<div
  class="Villain Villain--contained"
>
  <div
    class="MuiGrid-root grid MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
    >
      <div
        class="content ColorPair ColorPair--blue-800"
      >
        <h3
          class="MuiTypography-root title Typography MuiTypography-h4"
        >
          H2 Heading
        </h3>
        <div
          class="text"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel nisl blandit, finibus augue et, ultricies felis. In id nunc nunc. Nullam ac nulla justo. Sed sollicitudin volutpat arcu at laoreet. Ut vel augue nisi. Pellentesque egestas sapien et mauris rutrum laoreet. Integer tellus enim, posuere vel nibh suscipit, rhoncus ornare lectus. Mauris ac interdum nibh, quis dictum nulla.
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained Button cta MuiButton-containedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Call to action
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
    >
      <div
        class="image"
        style="background-image: url(path-to-image);"
      />
    </div>
  </div>
</div>
`;

exports[`Villain component renders full size 1`] = `
<div
  class="Villain Villain--full-size ColorPair ColorPair--blue-800"
>
  <div
    class="MuiContainer-root container Container MuiContainer-maxWidthXl"
  >
    <div
      class="content"
    >
      <h2
        class="MuiTypography-root title Typography Typography--underline MuiTypography-h2"
      >
        H2 Heading
      </h2>
      <div
        class="text"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel nisl blandit, finibus augue et, ultricies felis. In id nunc nunc. Nullam ac nulla justo. Sed sollicitudin volutpat arcu at laoreet. Ut vel augue nisi. Pellentesque egestas sapien et mauris rutrum laoreet. Integer tellus enim, posuere vel nibh suscipit, rhoncus ornare lectus. Mauris ac interdum nibh, quis dictum nulla.
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained Button cta MuiButton-containedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Call to action
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <div
    class="image"
    style="background-image: url(path-to-image);"
  />
</div>
`;

exports[`Villain component renders full size and reversed 1`] = `
<div
  class="Villain Villain--full-size Villain--reversed ColorPair ColorPair--blue-800"
>
  <div
    class="MuiContainer-root container Container MuiContainer-maxWidthXl"
  >
    <div
      class="content"
    >
      <h2
        class="MuiTypography-root title Typography Typography--underline MuiTypography-h2"
      >
        H2 Heading
      </h2>
      <div
        class="text"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel nisl blandit, finibus augue et, ultricies felis. In id nunc nunc. Nullam ac nulla justo. Sed sollicitudin volutpat arcu at laoreet. Ut vel augue nisi. Pellentesque egestas sapien et mauris rutrum laoreet. Integer tellus enim, posuere vel nibh suscipit, rhoncus ornare lectus. Mauris ac interdum nibh, quis dictum nulla.
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained Button cta MuiButton-containedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Call to action
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <div
    class="image"
    style="background-image: url(path-to-image);"
  />
</div>
`;

exports[`Villain component renders reversed 1`] = `
<div
  class="Villain Villain--contained Villain--reversed"
>
  <div
    class="MuiGrid-root grid MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-direction-xs-column-reverse"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
    >
      <div
        class="content ColorPair ColorPair--blue-800"
      >
        <h3
          class="MuiTypography-root title Typography MuiTypography-h4"
        >
          H2 Heading
        </h3>
        <div
          class="text"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel nisl blandit, finibus augue et, ultricies felis. In id nunc nunc. Nullam ac nulla justo. Sed sollicitudin volutpat arcu at laoreet. Ut vel augue nisi. Pellentesque egestas sapien et mauris rutrum laoreet. Integer tellus enim, posuere vel nibh suscipit, rhoncus ornare lectus. Mauris ac interdum nibh, quis dictum nulla.
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
    >
      <div
        class="image"
        style="background-image: url(path-to-image);"
      />
    </div>
  </div>
</div>
`;
